# HunterTrace

./: .gitignore  CALIBRATION_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  Dockerfile.service  HunterTrace_Documentation.tex  LICENSE  MANIFEST.in  README.md  SECURITY.md  advancedRealIpExtractor.py  config.service.yaml  docker-compose.service.yml  fetchHostingKey.py  geolocationEnrichment.py  headerAnalyzer.py  hostingKeywordsIntegration.py  hunterTrace.py  huntertrace_harness.py  nginx.conf  pyproject.toml  pytest_output.txt  realIPExtractor.py  requirements-service.txt  requirements.txt  setup.py  vpnBacktrackAnalyzer.py
.github/: CODEOWNERS
config/: scoring.yaml
demo/: DEMO_COMMANDS.md  clean_case.json  conflict_case.json  vpn_case.json
docs/: CALIBRATION_LAYER.md  CLI_ENRICHMENT_SUMMARY.md  DATA_DRIVEN_PIPELINE.md  DELIVERY_SUMMARY.txt  EVALUATION_FRAMEWORK_EXTENSIONS.md  FLOW_TRANSFORMATION_GUIDE.md  FLOW_VISUALIZATION_TEST_REPORT.md  HUNTERTRACE_Technical_Summary.md  HunterTrace_VPN_Backtracking_Confidence.docx  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MANIFEST.md  PHASE5_EXTENSIONS_SUMMARY.md  PHASE5_QUICK_REFERENCE.md  PHASE5_SUMMARY.md  PHASE6_EXPLAINABILITY.md  PHASE6_QUICK_REFERENCE.md  PHASE7_ADVERSARIAL_FRAMEWORK.md  PHASE7_CRITICAL_FIXES.md  PHASE8_IMPLEMENTATION.md  PHASE8_SUMMARY.md  PHASES.md  PROCESSING_FLOW_GUIDE.md  PRODUCTION_VALIDATION.md  QUICKSTART.md  QUICK_REFERENCE.md  SERVICE_LAYER.md  USAGE.md  VALIDATION.md  VALIDATION_INTEGRITY_REFACTOR.md
evaluation/: evaluationFramework.py  quick_test.py  runEval.py  test_fix.py  test_real_eml_runner.py
examples/: GROUND_TRUTH.json  analyze_email.py  anonymized_like_05.eml  broken_chain_06.eml  clean_enterprise_01.eml  client.py  cloud_native_ci_10.eml  forwarded_chain_03.eml  high_security_enterprise_07.eml  intl_routing_09.eml  malformed_headers_08.eml  multi_hop_relay_02.eml  spoofed_headers_04.eml
huntertrace/: __init__.py  __main__.py  __version__.py  cli.py
huntertrace-release/: CHANGELOG.md  MANIFEST.in  README.md
results/: evaluation_report-00.json
scripts/: build_release.sh  enterprise_demo.py  example_calibration_integration.py  integration_guide.py  read_test_datasets.py  validate_ground_truth.py  validate_production.py
src/: actorProfiler.py  advancedRealIpExtractor.py  attackGraphBuilder.py  attributeAnalysis.py  attributionEngine.py  autoCorpusBuilder.py  campaignCorrelator.py  config.json  datasetCreator.py  evaluationFramework.py  fetchCorpus.py  fixAndVerify.py  generateSampleEmls.py  geolocationEnrichment.py  graphCentralityEngine.py  hosting_keywords_cache.json  hunterTrace.py  hunterTraceV3.py  realIpExtractor.py  runEval.py  runIntegrationTest.py  senderClassifier.py  testAttribution.py  (+5 more)
(+229 files in other folders)
