[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "huntertrace"
version = "1.2.2"
description = "Advanced phishing actor attribution using Bayesian inference and graph analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HUNTЕРТRACE Contributors", email = "akshayvmudaliar@gmail.com"}
]
maintainers = [
    {name = "HUNTЕРТRACE Contributors", email = "akshayvmudaliar@gmail.com"}
]
keywords = [
    "phishing",
    "attribution",
    "cybersecurity",
    "forensics",
    "email-analysis",
    "threat-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "networkx>=2.6",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "dnspython>=2.7.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "build>=0.7",
    "twine>=3.4",
]
graph = [
    "python-louvain>=0.15",
]
whois = [
    "python-whois>=0.7.3",
]
all = [
    "python-louvain>=0.15",
    "python-whois>=0.7.3",
    "matplotlib>=3.3.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/akshaydotweb/huntertrace"
Documentation = "https://github.com/akshaydotweb/huntertrace/blob/main/docs"
Repository = "https://github.com/akshaydotweb/huntertrace"
Issues = "https://github.com/akshaydotweb/huntertrace/issues"
Changelog = "https://github.com/akshaydotweb/huntertrace/blob/main/CHANGELOG.md"

[project.scripts]
huntertrace = "huntertrace.cli:main"

[tool.setuptools]
packages = ["huntertrace"]
include-package-data = true

[tool.setuptools.package-data]
huntertrace = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=huntertrace --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
